PREVIEW – fix edit zone resizing on small device

--- a/src/css/style_mosaico_content.less
+++ b/src/css/style_mosaico_content.less
@@ -338,9 +338,6 @@
     max-width: 900px;
   }
   .withPreviewFrame & {
-    @media (max-width: 1700px) {
-      max-width: 700px;
-    }
     @media (min-width: 1700px) {
       max-width: 800px;
     }
